distro-info (0.10) UNRELEASED; urgency=low

  * Add a README.Debian.
  * Actually test with Python 3 (typo)
  * libdistro-info-perl: Print a warning and return 0 when data is out of
    date, rather than dying.

 -- Stefano Rivera <stefanor@debian.org>  Sun, 06 May 2012 08:55:54 +0200

distro-info (0.9) unstable; urgency=low

  * debian-distro-info: Add an --alias option. Thanks to Antonio Ospite
    for the work. (Closes: #645171)
  * Make Python code valid Python 2 and 3 code and add a Python 3 module.
  * Fix one memmory leak in main() function.

 -- Benjamin Drung <bdrung@debian.org>  Fri, 13 Apr 2012 16:02:40 +0200

distro-info (0.8.2) unstable; urgency=low

  * Drop liblist-compare-perl from Build-Depends. Use our own list comparison
    functions in the test suite.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 05 Apr 2012 11:39:55 +0200

distro-info (0.8.1) unstable; urgency=low

  * Fix build failure due to wrong variable type.

 -- Benjamin Drung <bdrung@debian.org>  Tue, 03 Apr 2012 13:02:26 +0200

distro-info (0.8) unstable; urgency=low

  * Run shell scripts with 'set -f' (LP: #965378).
  * Rewrite scripts in C. The binaries are 2.3 times bigger than the shell
    scripts, but they are between four and six times faster. Forking the process
    takes longer than executing it. The plain execution time is around 25 times
    faster than the shell scripts.
  * Extend command line test cases.

 -- Benjamin Drung <bdrung@debian.org>  Tue, 03 Apr 2012 01:24:23 +0200

distro-info (0.7.1) unstable; urgency=low

  * Use shunit2 for testing the command line scripts instead of using an own
    custom test framework and install the test cases.
  * test-ubuntu-distro-info: Fix i386 build failure due to year 2038 problem.

 -- Benjamin Drung <bdrung@debian.org>  Mon, 26 Mar 2012 01:43:16 +0200

distro-info (0.7) unstable; urgency=low

  * Rewrite scripts in Shell. The scripts are smaller than the Haskell binaries