@@ -4,6 +4,7 @@ distro-info (0.10) UNRELEASED; urgency=low
   * Actually test with Python 3 (typo)
   * libdistro-info-perl: Print a warning and return 0 when data is out of
     date, rather than dying.
+  * Use dpkg-buildflags and enable hardening.
 
  -- Stefano Rivera <stefanor@debian.org>  Sun, 06 May 2012 08:55:54 +0200
 
